--- a/k8s-manifests/frontend-dev.yaml
+++ b/k8s-manifests/frontend-dev.yaml
@@ -20,13 +20,13 @@ spec:
       labels:
         vms: frontend
     spec:
-      env:
-        - name: AUTH_SERVICE_BASE_URL
-          value: 'http://auth-service:8002/api/'
       containers:
         - name: frontend-service-pod
-          image: 678554781153.dkr.ecr.ap-southeast-1.amazonaws.com/vaccination-system-images:frontend
+          image: ${ECR_REGISTRY_URI}:${IMAGE_TAG}
           imagePullPolicy: Always
+          env:
+            - name: AUTH_SERVICE_BASE_URL
+              value: 'http://auth-service:8002/api/'
           ports:
             - containerPort: 3000
           resources:
