--- a/k8s-manifests/frontend-dev.yaml
+++ b/k8s-manifests/frontend-dev.yaml
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
         - name: frontend-service-pod
-          image: "${ECR_REGISTRY_URI}:${IMAGE_TAG}"
+          image: ${ECR_REGISTRY_URI}:${IMAGE_TAG}
           imagePullPolicy: Always
           env:
             - name: AUTH_SERVICE_BASE_URL
