--- a/buildspec-deploy.yaml
+++ b/buildspec-deploy.yaml
@@ -6,6 +6,7 @@ env:
   parameter-store:
     ECR_REGISTRY_URI: ecr-registry-uri
     AWS_DEFAULT_REGION: default-region-aws
+    ACCOUNT_ID: account_id
 
 phases:
   install:
@@ -21,7 +22,7 @@ phases:
   build:
     commands:
       - echo "Setting Environment Variables related to AWS CLI for Kube Config Setup"
-      - CREDENTIALS=$(aws sts assume-role --role-arn arn:aws:iam::678554781153:role/service-role/Vaccination-CodeBuildServiceRole --role-session-name eks-codebuild --region ap-southeast-1)
+      - CREDENTIALS=$(aws sts assume-role --role-arn arn:aws:iam::$ACCOUNT_ID:role/service-role/Vaccination-CodeBuildServiceRole --role-session-name eks-codebuild --region $AWS_DEFAULT_REGION)
       - export AWS_ACCESS_KEY_ID="$(echo ${CREDENTIALS} | jq -r '.Credentials.AccessKeyId')"
       - export AWS_SECRET_ACCESS_KEY="$(echo ${CREDENTIALS} | jq -r '.Credentials.SecretAccessKey')"
       - export AWS_SESSION_TOKEN="$(echo ${CREDENTIALS} | jq -r '.Credentials.SessionToken')"
@@ -33,9 +34,9 @@ phases:
     commands:
       - echo "Apply changes to kube manifests"  
       - kubectl get pods -A
-      # - envsubst < k8s-manifests/frontend-dev.yaml | kubectl delete -f -
+      - kubectl apply -f k8s-manifests/frontend-autoscaling.yaml
+      - kubectl apply -f k8s-manifests/frontend-dev-loadbalancer.yaml
       - envsubst < k8s-manifests/frontend-dev.yaml | kubectl apply -f -
-
-
+      - envsubst < k8s-manifests/frontend-dev.yaml | kubectl rollout restart -f -
     
 privilegedMode: true
