--- a/buildspec-deploy.yaml
+++ b/buildspec-deploy.yaml
@@ -6,7 +6,7 @@ env:
   parameter-store:
     ECR_REGISTRY_URI: ecr-registry-uri
     AWS_DEFAULT_REGION: default-region-aws
-    ACCOUNT_ID: account_id
+    ACCOUNT_ID: account-id
 
 phases:
   install:
