--- a/.env.development
+++ b/.env.development
@@ -2,4 +2,4 @@ NEXT_PUBLIC_POKEMON_LIST_API_BASE_URL=https://json-server-mock.vercel.app/api/
 NEXT_PUBLIC_API_RETRY_INTERVAL_IN_SECONDS=5
 NEXT_PUBLIC_API_MAX_RETRY=5
 
-AUTH_SERVICE_BASE_URL=
+AUTH_SERVICE_BASE_URL=http://localhost:8002/api
